@@ -100,7 +100,7 @@ class ReportBundleCreationServiceTest {
         LocalDate.now(),
         LocalDate.ofInstant(meta.getLastUpdated().toInstant(), ZoneId.systemDefault()));
     assertTrue(meta.hasProfile());
-    assertEquals(FhirConstants.PROFILE_REPORT_BUNLDE, meta.getProfile().get(0).asStringValue());
+    assertEquals(FhirConstants.PROFILE_REPORT_BUNLDE, meta.getProfile().getFirst().asStringValue());
 
     assertTrue(bundle.hasIdentifier());
     final Identifier identifier = bundle.getIdentifier();
@@ -144,7 +144,8 @@ class ReportBundleCreationServiceTest {
         statisticInformationBedOccupancy.getItem();
     assertEquals(2, items.size());
 
-    final QuestionnaireResponseItemComponent numberOccupiedBedsGeneralWardAdultsItem = items.get(0);
+    final QuestionnaireResponseItemComponent numberOccupiedBedsGeneralWardAdultsItem =
+        items.getFirst();
     assertEquals(
         "numberOccupiedBedsGeneralWardAdults", numberOccupiedBedsGeneralWardAdultsItem.getLinkId());
     final List<QuestionnaireResponseItemAnswerComponent>
@@ -152,7 +153,7 @@ class ReportBundleCreationServiceTest {
             numberOccupiedBedsGeneralWardAdultsItem.getAnswer();
     assertEquals(1, numberOccupiedBedsGeneralWardAdultsAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOccupiedBedsGeneralWardAdultsAnswer =
-        numberOccupiedBedsGeneralWardAdultsAnswerList.get(0);
+        numberOccupiedBedsGeneralWardAdultsAnswerList.getFirst();
     assertEquals(
         3, ((IntegerType) numberOccupiedBedsGeneralWardAdultsAnswer.getValue()).getValue());
 
@@ -166,13 +167,13 @@ class ReportBundleCreationServiceTest {
             numberOccupiedBedsGeneralWardChildrenItem.getAnswer();
     assertEquals(1, numberOccupiedBedsGeneralWardChildrenAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOccupiedBedsGeneralWardChildrenAnswer =
-        numberOccupiedBedsGeneralWardChildrenAnswerList.get(0);
+        numberOccupiedBedsGeneralWardChildrenAnswerList.getFirst();
     assertEquals(
         0, ((IntegerType) numberOccupiedBedsGeneralWardChildrenAnswer.getValue()).getValue());
   }
 
   private void checkEntries(List<BundleEntryComponent> entryList, BedOccupancy bedOccupancy) {
-    final BundleEntryComponent reportBedOccupancyEntry = entryList.get(0);
+    final BundleEntryComponent reportBedOccupancyEntry = entryList.getFirst();
     assertTrue(reportBedOccupancyEntry.hasFullUrl());
 
     final BundleEntryComponent notifierRoleEntry = entryList.get(1);
@@ -204,7 +205,7 @@ class ReportBundleCreationServiceTest {
     assertTrue(reportBedOccupancy.hasMeta());
     final Meta meta = reportBedOccupancy.getMeta();
     assertTrue(meta.hasProfile());
-    assertEquals(PROFILE_REPORT_BED_OCCUPANCY, meta.getProfile().get(0).asStringValue());
+    assertEquals(PROFILE_REPORT_BED_OCCUPANCY, meta.getProfile().getFirst().asStringValue());
 
     assertTrue(reportBedOccupancy.hasIdentifier());
     final Identifier identifier = reportBedOccupancy.getIdentifier();
@@ -215,16 +216,16 @@ class ReportBundleCreationServiceTest {
     assertTrue(reportBedOccupancy.hasType());
     final List<Coding> typeCodings = reportBedOccupancy.getType().getCoding();
     assertEquals(1, typeCodings.size());
-    final Coding typeCoding = typeCodings.get(0);
+    final Coding typeCoding = typeCodings.getFirst();
     assertEquals(SYSTEM_LOINC, typeCoding.getSystem());
     assertEquals("80563-0", typeCoding.getCode());
     assertEquals("Report", typeCoding.getDisplay());
 
     final List<CodeableConcept> categoryList = reportBedOccupancy.getCategory();
     assertEquals(1, categoryList.size());
-    final List<Coding> categoryCodings = categoryList.get(0).getCoding();
+    final List<Coding> categoryCodings = categoryList.getFirst().getCoding();
     assertEquals(1, categoryCodings.size());
-    final Coding categoryCoding = categoryCodings.get(0);
+    final Coding categoryCoding = categoryCodings.getFirst();
     assertEquals(CODE_SYSTEM_REPORT_CATEGORY, categoryCoding.getSystem());
     assertEquals("bedOccupancyReport", categoryCoding.getCode());
     assertEquals("Bettenbelegungsstatistik", categoryCoding.getDisplay());
@@ -252,11 +253,11 @@ class ReportBundleCreationServiceTest {
     final List<SectionComponent> sections = reportBedOccupancy.getSection();
     assertEquals(1, sections.size());
 
-    final SectionComponent reportSection = sections.get(0);
+    final SectionComponent reportSection = sections.getFirst();
     assertTrue(reportSection.hasCode());
     final List<Coding> reportSectionCodings = reportSection.getCode().getCoding();
     assertEquals(1, reportSectionCodings.size());
-    final Coding reportSectionCoding = reportSectionCodings.get(0);
+    final Coding reportSectionCoding = reportSectionCodings.getFirst();
     assertEquals(CODE_SYSTEM_REPORT_SECTION, reportSectionCoding.getSystem());
     assertEquals("statisticInformationBedOccupancySection", reportSectionCoding.getCode());
     assertEquals(
@@ -264,7 +265,7 @@ class ReportBundleCreationServiceTest {
         reportSectionCoding.getDisplay());
     final List<Reference> reportEntries = reportSection.getEntry();
     assertEquals(1, reportEntries.size());
-    final Reference reportEntry = reportEntries.get(0);
+    final Reference reportEntry = reportEntries.getFirst();
     assertEquals(statisticInformationBedOccupancy, reportEntry.getResource());
   }
 
@@ -279,14 +280,15 @@ class ReportBundleCreationServiceTest {
     assertTrue(notifierFacility.hasMeta());
     final Meta meta = notifierFacility.getMeta();
     assertTrue(meta.hasProfile());
-    assertEquals(FhirConstants.PROFILE_NOTIFIER_FACILITY, meta.getProfile().get(0).asStringValue());
+    assertEquals(
+        FhirConstants.PROFILE_NOTIFIER_FACILITY, meta.getProfile().getFirst().asStringValue());
 
     assertTrue(notifierFacility.hasType());
     final List<CodeableConcept> types = notifierFacility.getType();
     assertEquals(1, types.size());
-    final List<Coding> typeCodings = types.get(0).getCoding();
+    final List<Coding> typeCodings = types.getFirst().getCoding();
     assertEquals(1, typeCodings.size());
-    final Coding typeCoding = typeCodings.get(0);
+    final Coding typeCoding = typeCodings.getFirst();
     assertEquals(FhirConstants.CODE_SYSTEM_ORGANIZATION_TYPE, typeCoding.getSystem());
     assertEquals("hospital", typeCoding.getCode());
     assertEquals("Krankenhaus", typeCoding.getDisplay());
@@ -297,7 +299,7 @@ class ReportBundleCreationServiceTest {
     assertTrue(notifierFacility.hasTelecom());
     final List<ContactPoint> telecomList = notifierFacility.getTelecom();
     assertEquals(2, telecomList.size());
-    final ContactPoint phone = telecomList.get(0);
+    final ContactPoint phone = telecomList.getFirst();
     assertEquals("phone", phone.getSystem().toCode());
     assertEquals("01234567", phone.getValue());
     final ContactPoint email = telecomList.get(1);
@@ -307,21 +309,21 @@ class ReportBundleCreationServiceTest {
     assertTrue(notifierFacility.hasAddress());
     final List<Address> addresses = notifierFacility.getAddress();
     assertEquals(1, addresses.size());
-    final Address address = addresses.get(0);
+    final Address address = addresses.getFirst();
     checkAddress(address, facilityAddressInfo);
 
     assertTrue(notifierFacility.hasContact());
     final List<OrganizationContactComponent> contactList = notifierFacility.getContact();
     assertEquals(1, contactList.size());
-    final HumanName contactName = contactList.get(0).getName();
+    final HumanName contactName = contactList.getFirst().getName();
     assertEquals("Frau Dr. Anna Beate Carolin Ansprechpartner", contactName.getText());
     assertEquals("Ansprechpartner", contactName.getFamily());
     final List<StringType> given = contactName.getGiven();
     assertEquals(3, given.size());
-    assertEquals("Anna", given.get(0).asStringValue());
+    assertEquals("Anna", given.getFirst().asStringValue());
     assertEquals("Beate", given.get(1).asStringValue());
     assertEquals("Carolin", given.get(2).asStringValue());
-    assertEquals("Dr.", contactName.getPrefix().get(0).asStringValue());
+    assertEquals("Dr.", contactName.getPrefix().getFirst().asStringValue());
   }
 
   private void checkNotifierRole(
@@ -334,7 +336,7 @@ class ReportBundleCreationServiceTest {
     assertTrue(notifierRole.hasMeta());
     final Meta meta = notifierRole.getMeta();
     assertTrue(meta.hasProfile());
-    assertEquals(FhirConstants.PROFILE_NOTIFIER_ROLE, meta.getProfile().get(0).asStringValue());
+    assertEquals(FhirConstants.PROFILE_NOTIFIER_ROLE, meta.getProfile().getFirst().asStringValue());
 
     assertTrue(notifierRole.hasOrganization());
     final Reference organization = notifierRole.getOrganization();
@@ -352,7 +354,7 @@ class ReportBundleCreationServiceTest {
     final Meta meta = statisticInformationBedOccupancy.getMeta();
     assertTrue(meta.hasProfile());
     assertEquals(
-        PROFILE_STATISTIC_INFORMATION_BED_OCCUPANCY, meta.getProfile().get(0).asStringValue());
+        PROFILE_STATISTIC_INFORMATION_BED_OCCUPANCY, meta.getProfile().getFirst().asStringValue());
 
     assertEquals(
         QUESTIONAIRE_STATISTIC_QUESTIONS_BED_OCCUPANCY,
@@ -364,7 +366,8 @@ class ReportBundleCreationServiceTest {
         statisticInformationBedOccupancy.getItem();
     assertEquals(4, items.size());
 
-    final QuestionnaireResponseItemComponent numberOperableBedsGeneralWardAdultsItem = items.get(0);
+    final QuestionnaireResponseItemComponent numberOperableBedsGeneralWardAdultsItem =
+        items.getFirst();
     assertEquals(
         "numberOperableBedsGeneralWardAdults", numberOperableBedsGeneralWardAdultsItem.getLinkId());
     final List<QuestionnaireResponseItemAnswerComponent>
@@ -372,7 +375,7 @@ class ReportBundleCreationServiceTest {
             numberOperableBedsGeneralWardAdultsItem.getAnswer();
     assertEquals(1, numberOperableBedsGeneralWardAdultsAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOperableBedsGeneralWardAdultsAnswer =
-        numberOperableBedsGeneralWardAdultsAnswerList.get(0);
+        numberOperableBedsGeneralWardAdultsAnswerList.getFirst();
     assertEquals(
         30, ((IntegerType) numberOperableBedsGeneralWardAdultsAnswer.getValue()).getValue());
 
@@ -384,7 +387,7 @@ class ReportBundleCreationServiceTest {
             numberOccupiedBedsGeneralWardAdultsItem.getAnswer();
     assertEquals(1, numberOccupiedBedsGeneralWardAdultsAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOccupiedBedsGeneralWardAdultsAnswer =
-        numberOccupiedBedsGeneralWardAdultsAnswerList.get(0);
+        numberOccupiedBedsGeneralWardAdultsAnswerList.getFirst();
     assertEquals(
         22, ((IntegerType) numberOccupiedBedsGeneralWardAdultsAnswer.getValue()).getValue());
 
@@ -398,7 +401,7 @@ class ReportBundleCreationServiceTest {
             numberOperableBedsGeneralWardChildrenItem.getAnswer();
     assertEquals(1, numberOperableBedsGeneralWardChildrenAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOperableBedsGeneralWardChildrenAnswer =
-        numberOperableBedsGeneralWardChildrenAnswerList.get(0);
+        numberOperableBedsGeneralWardChildrenAnswerList.getFirst();
     assertEquals(
         5, ((IntegerType) numberOperableBedsGeneralWardChildrenAnswer.getValue()).getValue());
 
@@ -412,14 +415,14 @@ class ReportBundleCreationServiceTest {
             numberOccupiedBedsGeneralWardChildrenItem.getAnswer();
     assertEquals(1, numberOccupiedBedsGeneralWardChildrenAnswerList.size());
     final QuestionnaireResponseItemAnswerComponent numberOccupiedBedsGeneralWardChildrenAnswer =
-        numberOccupiedBedsGeneralWardChildrenAnswerList.get(0);
+        numberOccupiedBedsGeneralWardChildrenAnswerList.getFirst();
     assertEquals(
         2, ((IntegerType) numberOccupiedBedsGeneralWardChildrenAnswer.getValue()).getValue());
   }
 
   private void checkAddress(Address addressToCheck, FacilityAddressInfo addressInfo) {
     assertTrue(addressToCheck.hasLine());
-    final StringType addressLine = addressToCheck.getLine().get(0);
+    final StringType addressLine = addressToCheck.getLine().getFirst();
     assertEquals(
         addressInfo.getStreet() + " " + addressInfo.getHouseNumber(), addressLine.asStringValue());
 
